--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{
     background-size: 100%;
     background-repeat: inherit;
     font-family: 'Girassol';
-    cursor: url(cursor-lol.cur), auto;
+    cursor: url('cursor-lol.cur'), default;
 }
 header{
     background: #ffffff3d;
@@ -14,6 +14,10 @@ header{
     border-width: 15px;
     color: #97723d;
     text-shadow: 2px 3px 2px black;
+}
+a{
+    color: black;
+    text-decoration: none;
 }
 .menu ul {
     padding:0px;
@@ -28,7 +32,9 @@ header{
 .menu li {
     display: inline-block;
     width: 150px;
-    cursor: url(cursor-lol.cur), auto;
+}
+h1{
+    text-shadow: 2px 3px 2px #97723d;
 }
 .about-the-game-button, .characters-button, .youtube-button, .compare-button{
     border-radius: 3px;
@@ -36,16 +42,33 @@ header{
     font-size: 25px;
     font-family: 'Girassol';
     border: solid 1px black;
-    cursor: url(cursor-lol.cur), auto;
+    cursor: url('cursor-lol.cur'), default;
 }
-.introduction-site{
+.introduction-site, .introduction-game, .youtubers-list, .characters-list{
     text-align: center;
-    font-size: 30px;
-    background: #ffffff3d;
+    font-size: 40px;
+    color: bold;
+    background: #ffffff;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-style: ridge;
+    border-width: 5px;
+    border-radius: 35px;
+    border-color: #97723d;
+    background: #bda275c7;
 }
-.introduction-game{
+/*.introduction-game{
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
+    color: bold;
+    background: #ffffff;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-style: ridge;
+    border-width: 5px;
+    border-radius: 35px;
+    border-color: #97723d;
+    background: #bda275c7; */
 }
 .introduction-game-popup{
     position: fixed;
