--- a/style.css
+++ b/style.css
@@ -140,15 +140,15 @@ h1{
         font-family: 'Girassol';
         border: solid 1px black;
     }
-    .introduction-site{
+    .introduction-site, .introduction-game, .youtubers-list, .characters-list{
         text-align: center;
         font-size: 25px;
         background: #ffffff3d;
     }
-    .introduction-game{
+    /*.introduction-game{
         margin-top: 10%;
         text-align: center;
-        font-size: 20px;
+        font-size: 20px; */
     }
     .introduction-game-popup{
         position: fixed;
