--- a/style.css
+++ b/style.css
@@ -36,8 +36,10 @@ a{
 }
 h1{
     text-shadow: 2px 3px 2px #97723d;
+    display: inline-flexbox;
+    margin-top: 0%;
 }
-.about-the-game-button, .characters-button, .youtube-button, .compare-button{
+.about-the-game-button, .characters-button, .youtube-button, .compare-button, .back-to-main-page-button{
     border-radius: 3px;
     background-color: #bda275;
     font-size: 25px;
@@ -69,11 +71,11 @@ h1{
     border-width: 5px;
     border-radius: 35px;
     border-color: #97723d;
-    background: #bda275c7; */
+    background: #bda275c7;
 }
 .introduction-game-popup{
     position: fixed;
-    display: none /*flex*/;
+    display: none /*flex;
     top: 0; bottom: 0;
     left: 0;
     right: 0;
@@ -84,13 +86,17 @@ h1{
     border: solid 1px black;
     border-radius: 25px;
     background: #09404ff2;
-    color: black;
+    color: black;*/
 }
-.close-popup-button{
-    background: #ffffff3d;
-    margin-top: 0%;
-    font-family: 'Girassol';
-    border-radius: 10px;
+.back-button{
+    margin-left: 98%;
+    margin-top: 2%;;
+}
+.back-to-main-page-button{
+    margin-left: 90%;
+    margin-top: 2%;
+    width: 10%;
+    border-radius: 20px;
 }
 .made-by{
     text-align: center;
@@ -152,9 +158,9 @@ h1{
         text-align: center;
         font-size: 20px; */
     }
-    .introduction-game-popup{
+    /*.introduction-game-popup{
         position: fixed;
-        display: none/*flex*/;
+        display: none/*flex;
         top: 0; bottom: 0;
         left: 0;
         right: 0;
@@ -169,10 +175,9 @@ h1{
     }
     .close-popup-button{
         background: #ffffff3d;
-    /*    margin-left: 97%; */
         margin-top: 0%;
         font-family: 'Girassol';
-        border-radius: 10px;
+        border-radius: 10px;*/
     }
     .made-by{
         bottom: 0;
