--- a/style.css
+++ b/style.css
@@ -1,108 +1,84 @@
+*{
+    cursor: url('cursor-lol.cur'), default;
+    font-family: 'Cinzel', serif;
+}
+
 html{
     background-image: url("wallpaper.jpg");
-    background-size: 100%;
-    background-repeat: inherit;
-    font-family: 'Girassol';
-    cursor: url('cursor-lol.cur'), default;
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: fixed;
+    background-size: cover;
 }
+
 header{
     background: #ffffff3d;
-    font-size: 100px;
+    font-size: 90px;
     text-align: center;
-    border-style: double;
-    border-color: black;
-    border-width: 15px;
     color: #97723d;
     text-shadow: 2px 3px 2px black;
+    border-style: ridge;
+    border-width: 5px;
+    border-radius: 20px;
+    border-color: #97723d;
 }
-a{
-    color: black;
-    text-decoration: none;
-    cursor: url('cursor-lol.cur'), default;
-}
+
+
 .menu ul {
     padding:0px;
     padding-bottom: 10px;
     padding-top: 10px;
     margin:0px;
-    background-color: #ffffff3d;
+    border-radius: 20px;
     list-style: none;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
 }
+
 .menu li {
     display: inline-block;
     width: 150px;
 }
+
 h1{
     text-shadow: 2px 3px 2px #97723d;
     display: inline-flexbox;
     margin-top: 0%;
 }
-.about-the-game-button, .characters-button, .youtube-button, .compare-button, .back-to-main-page-button{
+
+.style-buttons{
     border-radius: 3px;
     background-color: #bda275;
-    font-size: 25px;
-    font-family: 'Girassol';
+    font-size: 18px;
     border: solid 1px black;
-    cursor: url('cursor-lol.cur'), default;
 }
-.introduction-site, .introduction-game, .youtubers-list, .characters-list, .compare-characters{
+
+.style-view{
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     color: bold;
-    background: #ffffff;
     padding-left: 25px;
     padding-right: 25px;
     border-style: ridge;
     border-width: 5px;
-    border-radius: 35px;
-    border-color: #97723d;
-    background: #bda275c7;
-}
-/*.introduction-game{
-    text-align: center;
-    font-size: 40px;
-    color: bold;
-    background: #ffffff;
-    padding-left: 25px;
-    padding-right: 25px;
-    border-style: ridge;
-    border-width: 5px;
-    border-radius: 35px;
-    border-color: #97723d;
-    background: #bda275c7;
-}
-.introduction-game-popup{
-    position: fixed;
-    display: none /*flex;
-    top: 0; bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 900px;
-    height: 500px;
-    padding: 15px;
-    border: solid 1px black;
-    border-radius: 25px;
-    background: #09404ff2;
-    color: black;
-}*/
-.back-to-main-page-button{
-    margin-left: 97%;
-    margin-top: 0%;
-    width: 10%;
     border-radius: 20px;
+    border-color: #97723d;
+    background: #bda275c7;
 }
+
 .made-by{
     text-align: center;
     bottom: 0;
     position: end;
     width: 100%;
+    border-radius: 10px;
     background: #ffffff3d;
 }
 
-
+.insivible-class{
+    visibility: hidden;
+    display: none;
+}
 
 /*VERSÃO MOBILE*/
 @media only screen and (max-width: 800px){
@@ -155,48 +131,11 @@ h1{
         background: #ffffff3d;
         background: #bda275c7;
     }
-    /*.introduction-game{
-        margin-top: 10%;
-        text-align: center;
-        font-size: 20px; */
-    }
-    /*.introduction-game-popup{
-        position: fixed;
-        display: none/*flex;
-        top: 0; bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 89%;
-        height: 480px;
-        padding: 15px;
-        border: solid 1px black;
-        border-radius: 25px;
-        background: #09404ff2;
-        color: black;
-    }
-    .close-popup-button{
-        background: #ffffff3d;
-        margin-top: 0%;
-        font-family: 'Girassol';
-        border-radius: 10px;
-    }*/
-    .back-button{
-        margin-bottom: 0px;
-        margin-top: 0px;
-    }
-    .back-to-main-page-button{
-        margin-left: 270px;
-        margin-top: 10px;
-        width: 30px;
-        height: 10%;
-        border-radius: 20px;
-    }
     .made-by{
+        text-align: center;
         bottom: 0;
         position: end;
         width: 100%;
         background: #ffffff3d;
     }
-
 }
