--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ header{
     border-radius: 20px;
     border-color: #97723d;
 }
-
-
+a{
+    text-decoration: none;
+}
 .menu ul {
     padding:0px;
     padding-bottom: 10px;
@@ -65,7 +66,15 @@ h1{
     border-color: #97723d;
     background: #bda275c7;
 }
-
+.characters-list{
+    text-align: left;
+    font-size: ;
+}
+img:hover{
+    transform: scale(1.5);
+    cursor: pointer;
+    cursor: url('cursor-lol.cur'), default;
+}
 .made-by{
     text-align: center;
     bottom: 0;
@@ -90,7 +99,7 @@ h1{
     }
     header{
         background: #ffffff3d;;
-        font-size: 50px;
+        font-size: 41px;
         text-align: center;
         border-style: double;
         border-color: black;
@@ -128,8 +137,10 @@ h1{
     .introduction-site, .introduction-game, .youtubers-list, .characters-list, .compare-characters{
         text-align: center;
         font-size: 20px;
-        background: #ffffff3d;
-        background: #bda275c7;
+    }
+    .characters-list{
+        text-align: left;
+        font-size: 20px;
     }
     .made-by{
         text-align: center;
