--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ header{
     color: #97723d;
     text-shadow: 2px 3px 2px black;
     border-style: ridge;
+    border-color: #97723d;
     border-width: 5px;
     border-radius: 20px;
 }
@@ -87,7 +88,8 @@ h1{
     border-color: #34dce8;
     background: #fbd27361;
     width: 600px;
-    height: 220px;
+    height: 250px;
+    font-size: 20px;
     /*margin-bottom: 10px;*/
 }
 img:hover{
@@ -95,7 +97,7 @@ img:hover{
     cursor: pointer;
     cursor: url('cursor-lol.cur'), default;
 }
-.image, .name, .title, .role{
+.image, .name, .title, .role, .info-champ{
     margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -178,7 +180,7 @@ img:hover{
         border-color: #34dce8;
         background: #fbd27361;
         width: 95%;
-        height: 290px;
+        height: 280px;
         margin-bottom: 10px;
         /*margin-bottom: 10px;*/
     }
