--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ header{
     color: #97723d;
     text-shadow: 2px 3px 2px black;
     border-style: ridge;
+    border-color: #97723d;
     border-width: 5px;
     border-radius: 20px;
-    border-color: #97723d;
 }
-
+a{
+    text-decoration: none;
+}
 .menu ul {
     padding:0px;
     padding-bottom: 10px;
@@ -65,34 +67,37 @@ h1{
     background: #bda275c7;
 }
 
-.characters-list{
+/*.characters-list{
     text-align: left;
     font-size: ;
     display: flex;
     flex-wrap: wrap;
-}
-.characters-list > div{
+}*/
+/*.characters-list > div{
     margin: 10px;
     align-items: center;
-}
-.champions-list{
+}*/
+/*.champions-list{
     display: inline;
     margin-right: 10px;
-}
+}*/
 .champions-card{
     display: inline-block;
     border-style: groove;
     border-width: 4px;
     border-color: #34dce8;
     background: #fbd27361;
-    width: 395px;
+    width: 600px;
+    height: 250px;
+    font-size: 20px;
+    /*margin-bottom: 10px;*/
 }
 img:hover{
     transform: scale(1.5);
     cursor: pointer;
     cursor: url('cursor-lol.cur'), default;
 }
-.image, .name, .title, .role{
+.image, .name, .title, .role, .info-champ{
     margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -168,15 +173,29 @@ img:hover{
         font-size: 20px;
 
     }
-    .characters-list{
+    .champions-card{
+        display: inline-block;
+        border-style: groove;
+        border-width: 4px;
+        border-color: #34dce8;
+        background: #fbd27361;
+        width: 95%;
+        height: 280px;
+        margin-bottom: 10px;
+        /*margin-bottom: 10px;*/
+    }
+    /*.characters-list{
         text-align: left;
         font-size: 20px;
-
         background: #ffffff3d;
         background: #bda275c7;
-    }
-    
-  
+    }*/
+    .made-by{
+        text-align: center;
+        bottom: 0;
+        position: end;
+        width: 100%;
+        background: #ffffff3d;
     }
     .made-by{
         text-align: center;
@@ -185,4 +204,4 @@ img:hover{
         width: 100%;
         background: #ffffff3d;
     }
-
+}
