--- a/style.css
+++ b/style.css
@@ -149,6 +149,9 @@ img:hover{
         background-repeat: inherit;
         font-family: 'Girassol';
     }
+    p{
+        font-size: 20px;
+    }
     header{
         background: #ffffff3d;;
         font-size: 41px;
@@ -189,7 +192,19 @@ img:hover{
     .introduction-site, .introduction-game, .youtubers-list, .characters-list, .compare-characters{
         text-align: center;
         font-size: 20px;
-
+    }
+    #sort-div, #filter-div{
+        display: inline-block;
+        font-size: 15px;
+        border-width: 4px;
+        border-radius: 5px;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+    #send-ordination, #filter-champions{
+        border-radius: 3px;
+        font-size: 13px;
+        border: solid 1px black;
     }
     .champions-card{
         display: inline-block;
@@ -208,13 +223,6 @@ img:hover{
         background: #ffffff3d;
         background: #bda275c7;
     }*/
-    .made-by{
-        text-align: center;
-        bottom: 0;
-        position: end;
-        width: 100%;
-        background: #ffffff3d;
-    }
     .made-by{
         text-align: center;
         bottom: 0;
