--- a/src/style.css
+++ b/src/style.css
@@ -100,6 +100,16 @@ h1{
     margin-right: 10px;
 }*/
 .champions-card{
+    display: inline-grid;
+    border-style: groove;
+    border-width: 4px;
+    border-color: #34dce8;
+    background: #fbd27361;
+    width: 304px;
+    height: 330px;
+    font-size: 20px;
+    margin-bottom: 10px;
+/*
     display: inline-block;
     border-style: groove;
     border-width: 4px;
@@ -108,7 +118,7 @@ h1{
     width: 600px;
     height: 250px;
     font-size: 20px;
-    /*margin-bottom: 10px;*/
+    margin-bottom: 10px;*/
 }
 img:hover{
     transform: scale(1.5);
