--- a/src/style.css
+++ b/src/style.css
@@ -138,6 +138,10 @@ h1{
     padding-top: 0%;
     max-width: 304px;
 }
+.image-splash{
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+}
 .made-by{
     text-align: center;
     bottom: 0;
