--- a/src/style.css
+++ b/src/style.css
@@ -234,8 +234,13 @@ h1{
         border-color: #34dce8;
         background: #fbd27361;
         width: 95%;
+        height: 90%;
         margin-bottom: 10px;
-        /*margin-bottom: 10px;*/
+    }
+    .image{
+        align-items: center;
+        padding-top: 0%;
+        max-width: 100%;
     }
     /*.characters-list{
         text-align: left;
