--- a/style.css
+++ b/style.css
@@ -140,7 +140,20 @@ h1 {
   visibility: hidden;
   display: none;
 }
-
+.youtube-box{
+  border-style: inset;
+  border-radius: 15px;
+  border-color: #34dce8;
+  display: inline-block;
+  margin-bottom: 10px;
+  background: #fbd27361;
+}
+.youtube-info{
+  display: block;
+}
+.video{
+  /*padding-left: 100px;*/
+}
 /*VERSÃO MOBILE*/
 @media only screen and (max-width: 800px) {
   html {
