--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,7 @@ h1 {
   border-width: 5px;
   border-radius: 20px;
   border-color: #97723d;
-  background: #bda275c7;
+  background: #bda275;
 }
 #order-search-buttons{
   display: inline-block;
@@ -106,7 +106,7 @@ h1 {
   border-style: groove;
   border-width: 4px;
   border-color: #34dce8;
-  background: #fbd27361;
+  background: #d6b569;
   width: 304px;
   height: 445px;
   font-size: 20px;
@@ -142,11 +142,10 @@ h1 {
 }
 .youtube-box{
   border-style: inset;
-  border-radius: 15px;
   border-color: #34dce8;
   display: inline-block;
   margin-bottom: 10px;
-  background: #fbd27361;
+  background: #d6b569;
 }
 .youtube-info{
   display: block;
@@ -157,6 +156,9 @@ h1 {
 iframe{
   height: 280px;
   width: 500px;
+}
+#characters-div, #youtube-media{
+  background: #bda275c2;
 }
 
 /*VERSÃO MOBILE*/
@@ -236,8 +238,6 @@ iframe{
     display: inline-block;
     border-style: groove;
     border-width: 4px;
-    border-color: #34dce8;
-    background: #fbd27361;
     width: 95%;
     height: 90%;
     margin-bottom: 10px;
