--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   font-family: "Cinzel", serif;
 }
 html {
-  background-image: url("wallpaper.jpg");
+  background-image: url("wallpaper1.jpg");
   background-repeat: no-repeat;
   background-position: right top;
   background-attachment: fixed;
