--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
   color: bold;
   padding-left: 25px;
   padding-right: 25px;
-  border-style: ridge;
+  /*border-style: ridge;
   border-width: 5px;
   border-radius: 20px;
   border-color: #97723d;
@@ -64,9 +64,9 @@ h1 {
 #order-search-buttons{
   display: inline-block;
 }
-#sort-div, #filter-div, #search-div {
+.for-div {
   display: inline-block;
-  background: #fbd27361;
+  background: #bda275;
   font-size: 15px;
   border-style: inset;
   border-width: 4px;
@@ -85,22 +85,33 @@ h1 {
   font-size: 13px;
   border: solid 1px black;
 }
+
 #compare-champions{
   padding-bottom: 15px;
 }
+
 #div-skill-number{
   height: 150px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  background: #bda275;
+  border-radius: 10px;
 }
+
 .for-display{
   height: 30px;
 }
+
 #see-data-here-button{
   height: 45px;
   width: 150px;
 }
+
+.for-hover:hover {
+ background-color: #34dce8;
+}
+
 .champions-card {
   display: inline-grid;
   border-style: groove;
@@ -112,22 +123,27 @@ h1 {
   font-size: 20px;
   margin-bottom: 10px;
 }
-.image, .name, .title, .key, .role, .info-champ {
+
+.common-class-for-information {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.image, .name, .title {
+
+.common-class-for-alignment {
   text-align: center;
 }
+
 .image {
   align-items: center;
   padding-top: 0%;
   max-width: 304px;
 }
+
 .image-splash {
   margin-block-start: 0px;
   margin-block-end: 0px;
 }
+
 .made-by {
   text-align: center;
   bottom: 0;
@@ -136,6 +152,7 @@ h1 {
   border-radius: 10px;
   background: #ffffff3d;
 }
+
 .insivible-class {
   visibility: hidden;
   display: none;
@@ -161,24 +178,70 @@ iframe{
   background: #bda275c2;
 }
 
+.youtube-box{
+  border-style: inset;
+  border-color: #34dce8;
+  display: inline-block;
+  margin-bottom: 10px;
+  background: #bda275;
+}
+.youtube-info{
+  display: block;
+}
+.youtube-info > p{
+  font-size: 20px;
+}
+iframe{
+  height: 280px;
+  width: 500px;
+}
+#characters-div, #youtube-media{
+  /*background: #bda275c2; */
+}
+
+.for-background-text {
+  background-color: #bda275;
+  /*background: #ffffff3d;*/
+  border-radius: 10px;
+  
+}
+
+#order-search-buttons{
+  display: inline-block;
+  background: #bda275;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 5px;
+  border-style: inset;
+  border-color: #34dce8;
+  padding: 10px;
+  margin-bottom: 50px;
+
+}
+
+
 /*VERSÃO MOBILE*/
 @media only screen and (max-width: 800px) {
   html {
-    /* background-image: ; */
-    background-size: 100%;
-    background-repeat: inherit;
+    /* background-position: right top;  background-attachment: fixed; */   
     font-family: "Girassol";
+    background-image: url("wallpaper-for-phone.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
+
   p {
     font-size: 20px;
   }
+
   header {
     background: #ffffff3d;
     font-size: 41px;
     text-align: center;
-    border-style: double;
-    border-color: black;
-    border-width: 15px;
+    border-style: ridge;
+    border-color: #97723d;
+    border-width: 10px;
     color: #97723d;
     text-shadow: 2px 3px 2px black;
   }
@@ -187,7 +250,6 @@ iframe{
     padding-bottom: 10px;
     padding-top: 10px;
     margin: 0px;
-    background-color: #ffffff3d;
     list-style: none;
     text-align: center;
     font-size: 30px;
@@ -202,18 +264,8 @@ iframe{
     margin-top: 0px;
     font-size: 30px;
   }
-  .about-the-game-button, .characters-button, .youtube-button, .compare-button {
-    border-radius: 3px;
-    background-color: #bda275;
-    font-size: 20px;
-    font-family: "Girassol";
-    border: solid 1px black;
-  }
-  .introduction-site, .introduction-game, .youtubers-list, .characters-list, .compare-characters {
-    text-align: center;
-    font-size: 20px;
-  }
-  #sort-div, #filter-div {
+
+  #sort-div {
     display: inline-block;
     font-size: 15px;
     border-width: 4px;
@@ -252,13 +304,15 @@ iframe{
   .for-display{
     height: 30px;
   }
-  #maior-igual-que{
+  #greater-than {
     margin-bottom: 0px;
   }
+
   #see-data-here-button{
     height: 45px;
     width: 150px;
   }
+
   .image {
     align-items: center;
     padding-top: 0%;
